<resources>
    <string name="app_name">Apple Class Detector</string>
    <string name="facebook_app_id">1640006786021330</string>
    <string name="fb_login_protocol_scheme">fb1640006786021330</string>
    <string name="log_email">Email</string>
    <string name="log_pass">Password</string>
    <string name="log_button">Login</string>
    <string name="reg_button">Register</string>
    <string name="reg_pass">Password</string>
    <string name="reg_pass_confirm">Confirm password</string>
    <string name="reg_name">Full name</string>
    <string name="reg_email">Email address</string>
    <string name="reg_company">Company</string>
    <string name="reg_address">Address</string>
    <string name="reg_street">Street</string>
    <string name="reg_nr">Nr.</string>
    <string name="reg_zip">Zip code</string>
    <string name="reg_city">City</string>
    <string name="reg_country">Country</string>
    <string name="reg_phone">Phone number</string>
    <string name="reg_date">dd-mm-yyyy </string>
    <string name="reg_sbm">Register</string>
    <string name="reg_already">I already have an account</string>
    <string name="ColorButton">COLOR</string>
    <string name="ProcentButton">%</string>
    <string name="BackButton">BACK</string>
    <string name="NextButton">NEXT</string>
    <string name="header_check">KANZI QUALITY CHECK</string>
    <string name="startColor">START</string>
    <string name="detailTitle">COLOR</string>
    <string name="scanButton">SCAN</string>
    <string name="detail" />
    <string name="status" />
    <string name="signed_out">Signed out</string>
    <string name="emailpassword_status_fmt">Logged in</string>
    <string name="firebase_status_fmt">Firebasestatus</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="log_out_button">Logout</string>
    <string name="signed_in_fmt">Signed in</string>
    <string name="reg_title">Register</string>
    <string name="login_title">Login</string>
    <string name="profile_user_name">Voorbeeldnaam</string>
    <string name="profile_user_email">voorbeeld@email.nl</string>
    <string name="profile_user_company">VoorBedrijf</string>
    <string name="profile_user_address_street">Vooradresstraat 123</string>
    <string name="profile_user_address_zip">1234AB Vooram</string>
    <string name="profile_user_country">Voorbeeldland</string>
    <string name="profile_user_phone">+31612345678</string>
    <string name="profile_email">Email:</string>
    <string name="profile_company">Company:</string>
    <string name="profile_address_street">Address:</string>
    <string name="profile_address_zip" />
    <string name="profile_country">Country:</string>
    <string name="profile_phone">Phone number:</string>
    <string name="reg_text_pass_str" />
    <string name="ver_title">Email verification</string>
    <string name="ver_text" />
    <string name="send_mail_button">Send</string>
    <string name="ver_resend_text">Not recieved anything? click here!</string>
</resources>
