<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mixfinity.cees.login.ProfileActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="426dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="426dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/profile_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile_user_email"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline10" />

    <TextView
        android:id="@+id/profile_user_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_user_company"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/profile_user_email"
        app:layout_constraintRight_toRightOf="@+id/profile_user_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_email" />

    <TextView
        android:id="@+id/profile_user_address_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_user_address_street"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/profile_user_email"
        app:layout_constraintRight_toRightOf="@+id/profile_user_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_company" />

    <TextView
        android:id="@+id/profile_user_address_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_user_address_zip"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/profile_user_email"
        app:layout_constraintRight_toRightOf="@+id/profile_user_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_address_street" />

    <TextView
        android:id="@+id/profile_user_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_user_country"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/profile_user_email"
        app:layout_constraintRight_toRightOf="@+id/profile_user_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_address_zip" />

    <TextView
        android:id="@+id/profile_user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_user_phone"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/profile_user_email"
        app:layout_constraintRight_toRightOf="@+id/profile_user_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_country" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile_email"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline10"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/profile_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_company"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/profile_email" />

    <TextView
        android:id="@+id/profile_address_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_address_street"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_company"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/profile_email" />

    <TextView
        android:id="@+id/profile_address_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/profile_address_zip"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_address_street"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/profile_email" />

    <TextView
        android:id="@+id/profile_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_country"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_address_zip"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/profile_email" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_phone"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_country"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/profile_email" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline10"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />


    <Button
        android:id="@+id/backToOption"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/black_button"
        android:paddingTop="3dp"
        android:text="@string/BackButton"
        android:textColor="@color/colorSecondaryFontBtn"
        app:layout_constraintRight_toLeftOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <Button
        android:id="@+id/signOutButton"
        android:text="@string/log_out_button"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:background="@drawable/login_button"
        android:textColor="@color/colorPrimaryFont"
        android:paddingTop="3dp"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline12" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/profile_avatar"
            android:layout_above="@+id/profile_user_name"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user_name"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
