<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_reg_2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <EditText
        android:id="@+id/reg_input_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input"
        android:ems="12"
        android:hint="@string/reg_company"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_name"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/reg_input_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:ems="12"
        android:hint="@string/reg_country"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_comp" />

    <EditText
        android:background="@drawable/input"
        android:padding="10dp"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorSecondaryFontBtn"
        android:id="@+id/reg_input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/reg_name"
        android:inputType="textCapWords"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/reg_input_add_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/input"
        android:ems="9"
        android:hint="@string/reg_street"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_country"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/reg_input_add_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/input"
        android:ems="3"
        android:hint="@string/reg_nr"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_country" />

    <EditText
        android:id="@+id/reg_input_add_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input"
        android:ems="5"
        android:hint="@string/reg_zip"
        android:inputType="textCapCharacters"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_add_street" />

    <EditText
        android:id="@+id/reg_input_add_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input"
        android:ems="7"
        android:hint="@string/reg_city"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_add_street" />

    <EditText
        android:id="@+id/reg_input_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input"
        android:ems="12"
        android:hint="@string/reg_phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_add_city" />

    <EditText
        android:id="@+id/reg_input_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/input"
        android:ems="12"
        android:hint="@string/reg_date"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="@color/colorSecondaryFontBtn"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_phone" />

    <TextView
        android:id="@+id/reg_button_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_already"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/reg_input_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/reg_input_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_input_date" />

    <Button
        android:id="@+id/next_button_ex"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:background="@drawable/login_button"
        android:paddingTop="3dp"
        android:text="@string/NextButton"
        android:textColor="@color/colorPrimaryFont"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />



    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline_reg_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/relativeLayout3">


        <TextView
            android:id="@+id/reg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/reg_title"
            android:textColor="#FFF"
            android:textSize="30dp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>